<resources>
    <string name="app_name">Score Keeper</string>
    <string name="score">Score</string>
    <string name="fouls">Foul</string>
    <string name="yellow_cards">Yellow Card</string>
    <string name="red_cards">Red Card</string>
    <string name="offsides">Offside</string>
    <string name="corners">Corner</string>
    <string name="_0">0</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="goal">goal</string>
    <string name="reset">reset</string>
</resources>
