<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8DAD9"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textColor="#231f20"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20"
                android:textSize="36sp" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="goalForTeamA"
                android:text="@string/goal" />


            <TextView
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="foulForTeamA"
                android:text="@string/fouls" />

            <TextView
                android:id="@+id/team_a_yellow_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="yellowForTeamA"
                android:text="@string/yellow_cards" />

            <TextView
                android:id="@+id/team_a_red_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="redForTeamA"
                android:text="@string/red_cards" />

            <TextView
                android:id="@+id/team_a_offside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="offsideForTeamA"
                android:text="@string/offsides" />

            <TextView
                android:id="@+id/team_a_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="cornerForTeamA"
                android:text="@string/corners" />


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="65dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textColor="#231f20"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20"
                android:textSize="36sp" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="goalForTeamB"
                android:text="@string/goal" />


            <TextView
                android:id="@+id/team_b_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="foulForTeamB"
                android:text="@string/fouls" />

            <TextView
                android:id="@+id/team_b_yellow_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="yellowForTeamB"
                android:text="@string/yellow_cards" />

            <TextView
                android:id="@+id/team_b_red_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="redForTeamB"
                android:text="@string/red_cards" />

            <TextView
                android:id="@+id/team_b_offside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="offsideForTeamB"
                android:text="@string/offsides" />

            <TextView
                android:id="@+id/team_b_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#231f20" />

            <Button
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:onClick="cornerForTeamB"
                android:text="@string/corners" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:onClick="resetValues"
        android:text="@string/reset" />

</RelativeLayout>